[package]
name = "sperses"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sperses"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.98"
once_cell = "1.8.0"
parking_lot = "0.11.1"
rand = { version = "0.8.4", features = ["small_rng"] }
